force-app/main/default/objects/Application_Course_Preference__c.object
<CustomObject>
    <description>A course preference represents a request to to gain admission to a specific course offering within Monash. It is submitted within an application, and tracks the lifecycle of being assessed for entry requirements, offer management and flows into enrolment.</description>
    <fields>
        <fullName>ACP_Hold_Reason__c</fullName>
        <description>The reason that an ACP has been put on hold.</description>
        <label>ACP Hold Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documents Pending</fullName>
                </value>
                <value>
                    <fullName>Information from Applicant Required</fullName>
                </value>
                <value>
                    <fullName>Internal Processing</fullName>
                </value>
                <value>
                    <fullName>Faculty Processing / Decision</fullName>
                </value>
                <value>
                    <fullName>Acceptance Documents Pending</fullName>
                </value>
                <value>
                    <fullName>Entry Requirements to be Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACP_ID__c</fullName>
        <displayFormat>ACP-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>ACP ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ACP_Url__c</fullName>
        <formula>&apos;/lightning/r/Application_Course_Preference__c/&apos;+  Id  +&apos;/view&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACP Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOU_Name__c</fullName>
        <description>Academic org unit name</description>
        <formula>Academic_Org_Unit__r.Name</formula>
        <label>AOU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Request__c</fullName>
        <description>API Request body to send to callista</description>
        <label>API Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Response__c</fullName>
        <description>API response body to send to callista</description>
        <label>API Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Academic_CI_Sequence_Number__c</fullName>
        <label>Academic CI Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Academic_Calendar_Type__c</fullName>
        <label>Academic Calendar Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Org_Unit_Name__c</fullName>
        <description>Academic Org Unit	Name</description>
        <formula>Academic_Org_Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Academic Org Unit	Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Org_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HDR Academic Unit</description>
        <label>Academic Org Unit</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Course Preferences</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accept_Fees_Prior_To_Scholarship_Date__c</fullName>
        <description>HDR accept date when opt to start earlier than the commencement date.</description>
        <label>Accept Fees Prior To Scholarship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accept_Fees_Prior_To_Scholarship_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR accept flag when opt to start earlier than the commencement date.</description>
        <label>Accept Fees Prior To Scholarship Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acceptance_Condition__c</fullName>
        <description>Maps to adm_course_appl_instance.APPLICANT_ACPTNCE_CNDTN</description>
        <label>Acceptance Condition</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_and_Equity__c</fullName>
        <description>Application Access and Equity</description>
        <formula>TEXT(Application__r.Access_and_Equity_Question__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access and Equity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Academic_Alternate_Code__c</fullName>
        <description>Commencement year that the application is for</description>
        <inlineHelpText>Commencement year that the application is for</inlineHelpText>
        <label>Actual Academic Alternate Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Admission_Calendar_Type__c</fullName>
        <description>Commencement period that the application is for</description>
        <inlineHelpText>Commencement period that the application is for</inlineHelpText>
        <label>Actual Admission Calendar Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Intake_Period__c</fullName>
        <formula>IF(NOT(ISBLANK(Deferred_Commencement_Period__c)), Deferred_Commencement_Period__c, Intake_Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Intake Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Offer_Response_Date__c</fullName>
        <description>Date the applicant responded to the offer</description>
        <inlineHelpText>Date the applicant responded to the offer</inlineHelpText>
        <label>Actual Offer Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Added_by_Assessor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify an ACP added by the assessor.</description>
        <label>Added by Assessor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Added_by_Course_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added by Course Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Reqs_Assessment_Decision__c</fullName>
        <description>This field is used by assessors in faculty departments to record their outcome against the assessment of students (mainly international) during the Additional Requirements Assessment stage of the admissions process where the faculty may assess the applicant&apos;s eligibility for a course through interviews, statement of purposes, auditions etc.</description>
        <label>Specialist Selection Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Applicant Input Required</fullName>
                </value>
                <value>
                    <fullName>Internal Input Required</fullName>
                </value>
                <value>
                    <fullName>Eligible for Conditional Offer</fullName>
                    <isActive>false</isActive>
                    <label>Eligible for Conditional Offer</label>
                </value>
                <value>
                    <fullName>Eligible for Full Offer</fullName>
                    <isActive>false</isActive>
                    <label>Eligible for Full Offer</label>
                </value>
                <value>
                    <fullName>No Decision: Return to Central Admissions</fullName>
                    <isActive>false</isActive>
                    <label>No Decision: Return to Central Admissions</label>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                    <isActive>false</isActive>
                    <label>Not Eligible</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjusted_Course_Duration_Type__c</fullName>
        <description>This field is used to record the course duration type after taking into account the approved credit points. This field needs to be displayed/consumed along with the Credit_Adjusted_Course_Duration__c field.</description>
        <label>Adjusted Course Duration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semester(s)</fullName>
                </value>
                <value>
                    <fullName>Trimester(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Application_Number__c</fullName>
        <description>Callista sync field</description>
        <label>Admission Application Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admission_CI_Sequence_Number__c</fullName>
        <label>Admission CI Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admission_Calendar_Type__c</fullName>
        <label>Admission Calendar Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <description>Admission Category is a Callista concept for defining groups of applicants with similar Admission Process requirements. Examples are UG-IS for Undergraduate international applications, VTAC-IS for International applications originated from VTAC not direct entry.</description>
        <inlineHelpText>Admission Category is a Callista concept for defining groups of applicants with similar Admission Process requirements. Examples are UG-IS for Undergraduate international applications, VTAC-IS for International applications originated from VTAC not direct</inlineHelpText>
        <label>Admission Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Code__c</fullName>
        <description>Admission Code describes the Matriculation Category assigned to an applicant on the basis of their current qualifications. Monash uses this to record the admission code VTAC provides. For example, V10 (overseas applicant with VCE or IB).</description>
        <inlineHelpText>Admission Code describes the Matriculation Category assigned to an applicant on the basis of their current qualifications. Monash uses this to record the admission code VTAC provides. For example, V10 (overseas applicant with VCE or IB).</inlineHelpText>
        <label>Admission Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admissions_Assessment_Status__c</fullName>
        <label>Admissions Lifecycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Course Entry Check</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Applicant Input Required</fullName>
                </value>
                <value>
                    <fullName>Internal Input Required</fullName>
                </value>
                <value>
                    <fullName>Additional Entry Requirements Check</fullName>
                </value>
                <value>
                    <fullName>Final Decision</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Outcome Finalisation</fullName>
                    <isActive>false</isActive>
                    <label>Outcome Finalisation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_Outcome_Review_Decision__c</fullName>
        <description>This field is used by assessors in faculty departments to record their decision against the review of an outcome set by IRS (Central Admissions Team) during the Outcome Review stage of the admissions process.</description>
        <label>Admissions Outcome Review Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>No Decision: Return to Central Admissions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_Process_Type__c</fullName>
        <label>Admissions Process Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Applicant__r.Age__c</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_as_at_course_start_date_del__c</fullName>
        <formula>IF(Course_Offering__r.Start_Date__c&lt;Applicant__r.Birthdate, &quot;&quot;,

TEXT(IF(YEAR(Course_Offering__r.Start_Date__c)=YEAR(Applicant__r.Birthdate),0,IF(YEAR(Course_Offering__r.Start_Date__c)-YEAR(Applicant__r.Birthdate)=1,IF(MONTH(Course_Offering__r.Start_Date__c)=MONTH(Applicant__r.Birthdate),IF(DAY(Course_Offering__r.Start_Date__c)&lt;DAY(Applicant__r.Birthdate),0,1),IF(MONTH(Course_Offering__r.Start_Date__c)&lt;MONTH(Applicant__r.Birthdate),IF(DAY(Course_Offering__r.Start_Date__c)&lt;DAY(Applicant__r.Birthdate),1,0),1)),IF(MONTH(Course_Offering__r.Start_Date__c)-MONTH(Applicant__r.Birthdate)&lt;0,YEAR(Course_Offering__r.Start_Date__c)-YEAR(Applicant__r.Birthdate)-1,IF(MONTH(Course_Offering__r.Start_Date__c)=MONTH(Applicant__r.Birthdate),IF(DAY(Course_Offering__r.Start_Date__c)&lt;DAY(Applicant__r.Birthdate),YEAR(Course_Offering__r.Start_Date__c)-YEAR(Applicant__r.Birthdate)-1,YEAR(Course_Offering__r.Start_Date__c)-YEAR(Applicant__r.Birthdate)),YEAR(Course_Offering__r.Start_Date__c)-YEAR(Applicant__r.Birthdate)))))) &amp; &quot; years, &quot; &amp;

TEXT(IF(YEAR(Course_Offering__r.Start_Date__c)=YEAR(Applicant__r.Birthdate),IF(MONTH(Course_Offering__r.Start_Date__c)=MONTH(Applicant__r.Birthdate),0,IF(MONTH(Course_Offering__r.Start_Date__c)&gt;MONTH(Applicant__r.Birthdate),IF(DAY(Course_Offering__r.Start_Date__c)&lt;DAY(Applicant__r.Birthdate),MONTH(Course_Offering__r.Start_Date__c)-MONTH(Applicant__r.Birthdate)-1,MONTH(Course_Offering__r.Start_Date__c)-MONTH(Applicant__r.Birthdate)),0)),IF(MONTH(Course_Offering__r.Start_Date__c)=MONTH(Applicant__r.Birthdate),IF(DAY(Course_Offering__r.Start_Date__c)&lt;DAY(Applicant__r.Birthdate),11,0),IF(MONTH(Course_Offering__r.Start_Date__c)&gt;MONTH(Applicant__r.Birthdate),IF(DAY(Course_Offering__r.Start_Date__c)&lt;DAY(Applicant__r.Birthdate),MONTH(Course_Offering__r.Start_Date__c)-MONTH(Applicant__r.Birthdate)-1,MONTH(Course_Offering__r.Start_Date__c)-MONTH(Applicant__r.Birthdate)),IF(MONTH(Course_Offering__r.Start_Date__c)&lt;MONTH(Applicant__r.Birthdate),IF(DAY(Course_Offering__r.Start_Date__c)&lt;DAY(Applicant__r.Birthdate),11-(MONTH(Applicant__r.Birthdate)-MONTH(Course_Offering__r.Start_Date__c)),12-(MONTH(Applicant__r.Birthdate)-MONTH(Course_Offering__r.Start_Date__c))),12-(MONTH(Applicant__r.Birthdate)-MONTH(Course_Offering__r.Start_Date__c))))))) &amp; &quot; months, &quot; &amp;

TEXT(IF(DAY(Course_Offering__r.Start_Date__c)&gt;=DAY(Applicant__r.Birthdate),DAY(Course_Offering__r.Start_Date__c)-DAY(Applicant__r.Birthdate),31-(DAY(Applicant__r.Birthdate)-DAY(Course_Offering__r.Start_Date__c)))) &amp; &quot; days&quot;

)</formula>
        <label>Applicant Age as at course start date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Comments__c</fullName>
        <description>Used for integration on Agent details between CRM and Callista.</description>
        <label>Agent Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Email__c</fullName>
        <formula>Application__r.AgentEmailAddress__c</formula>
        <label>Agency Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Application__r.AgentName__c</formula>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Org_Unit_Code__c</fullName>
        <description>Used to integrate Agent details between CRM and Callista</description>
        <label>Agency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreed_Start_Date__c</fullName>
        <description>Maps to adm_course_appl_instance.AGREED_START_DT</description>
        <label>Revised Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Account_Id__c</fullName>
        <formula>Applicant__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Lastname__c</fullName>
        <formula>Applicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Course Preferences</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Agent_Code__c</fullName>
        <formula>Application__r.Agent_Org_Unit_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Agency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Sequence_Number__c</fullName>
        <label>Application Sequence Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Capture status of Application on ACP</description>
        <formula>TEXT(Application__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Date__c</fullName>
        <formula>Application__r.Submitted_Date__c</formula>
        <label>Application Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Application No.</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Course Preferences</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applied_for_External_Scholarship_Name__c</fullName>
        <description>HDR research program applied for external scholarship name</description>
        <label>Applied for External Scholarship Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_for_External_Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR research program applied for external scholarship</description>
        <label>Applied for External Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_for_Equity_Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR Apply for Equity Scholarship</description>
        <label>Apply for Equity Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_for_Indigenous_Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR apply for indigenous scholarship</description>
        <label>Apply for Indigenous Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Credit_Points__c</fullName>
        <description>Displays the credit points approved during the Credit Assessment process</description>
        <inlineHelpText>How much credit points will be approved for this course?</inlineHelpText>
        <label>Credit: Approved Credit Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to state if assessment is required or not</description>
        <label>Assessment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Status__c</fullName>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Pre Assessment</fullName>
                </value>
                <value>
                    <fullName>Qualification Assessment</fullName>
                </value>
                <value>
                    <fullName>Assessment Outcome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode_Description__c</fullName>
        <label>Attendance Mode Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <label>Attendance Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type_Description__c</fullName>
        <label>Attendance Type Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <label>Attendance Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_Date__c</fullName>
        <description>Maps to adm_course_appl_instance.ADM_OUTCOME_STATUS_AUTH_DT</description>
        <label>Authorised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorising_Person_ID__c</fullName>
        <description>Maps to adm_course_appl_instance.ADM_OTCM_STATUS_AUTH_PERSON_ID</description>
        <label>Authorising Person ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bahasa_Offer_Condition__c</fullName>
        <description>To input Bahasa translation for the Offer condition text.</description>
        <label>Bahasa Offer Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Basis_For_Adminssion_Type__c</fullName>
        <label>Basis For Admission Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>311</fullName>
                    <label>311: HIGHER EDUCATION COURSE (COMPLETE/INCOMPLETE, AUST/OS)</label>
                </value>
                <value>
                    <fullName>312</fullName>
                    <label>312: TWO SINGLE HIGHER EDUCATION UNITS</label>
                </value>
                <value>
                    <fullName>313</fullName>
                    <label>313: DIPLOMA OF TERTIARY STUDIES (DOTS)</label>
                </value>
                <value>
                    <fullName>314</fullName>
                    <label>314: OPEN UNIVERSITIES AUSTRALIA (OUA)</label>
                </value>
                <value>
                    <fullName>315</fullName>
                    <label>315: MONASH COLLEGE DIPLOMA PART 2</label>
                </value>
                <value>
                    <fullName>316</fullName>
                    <label>316: MONASH ACCESS PROGRAM (MAP)</label>
                </value>
                <value>
                    <fullName>317</fullName>
                    <label>317: MONASH COLLEGE DIPLOMA PART 1</label>
                </value>
                <value>
                    <fullName>321</fullName>
                    <label>321: COMPLETE OR INCOMPLETE HIGHER ED ENABLING OR BRIDGING COURSE</label>
                </value>
                <value>
                    <fullName>341</fullName>
                    <label>341: AUST. TAFE OR VET COURSE AT CERT. IV LEVEL OR ABOVE</label>
                </value>
                <value>
                    <fullName>401</fullName>
                    <label>401: WORK AND LIFE EXPERIENCE</label>
                </value>
                <value>
                    <fullName>402</fullName>
                    <label>402: OTHER BASIS OF ADMISSION</label>
                </value>
                <value>
                    <fullName>403</fullName>
                    <label>403: MATURE AGE ENTRY</label>
                </value>
                <value>
                    <fullName>404</fullName>
                    <label>404: APPROVED APTITUDE TEST</label>
                </value>
                <value>
                    <fullName>405</fullName>
                    <label>405: A PROFESSIONAL QUALIFICATION</label>
                </value>
                <value>
                    <fullName>411</fullName>
                    <label>411: RECENT SEC ED(SCHOOL/VET OR OTHER AUS/OS PROVIDER)-ATAR ONLY</label>
                </value>
                <value>
                    <fullName>421</fullName>
                    <label>421: RECENT SEC ED(SCHL/VET OR OTHR AUS/OS PROVD)-ATAR &amp; CRITERIA</label>
                </value>
                <value>
                    <fullName>431</fullName>
                    <label>431: RECENT SEC ED(SCH/VET OR OTH AUS/OS PROV)-OTHR CRITERIA ONLY</label>
                </value>
                <value>
                    <fullName>432</fullName>
                    <label>432: APPROVED FOUNDATION PROGRAM</label>
                </value>
                <value>
                    <fullName>433</fullName>
                    <label>433: MONASH UNIVERSITY FOUNDATION YEAR (MUFY)</label>
                </value>
                <value>
                    <fullName>434</fullName>
                    <label>434: MONASH SOUTH AFRICA FOUNDATION PROGRAM</label>
                </value>
                <value>
                    <fullName>435</fullName>
                    <label>435: MONASH ADVANCED PREPARATION PROGRAM (MAPP)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <formula>Applicant__r.Birthdate</formula>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Data_Processing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Data Processing</label>
        <referenceTo>Bulk_Data_Processing__c</referenceTo>
        <relationshipLabel>Application Course Preferences</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COPricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Offering Pricing</label>
        <referenceTo>Course_Offering_Pricing__c</referenceTo>
        <relationshipLabel>Application Course Preferences</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Calendar that is referenced in the Course Offering. If there is not course offering, the 
Academic_CI_Sequence_Number__c + &apos;_&apos; + Admission_CI_Sequence_Number__c key is used to populate the lookup.</description>
        <inlineHelpText>Calendar referenced in the Course Offering</inlineHelpText>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>ACP</relationshipLabel>
        <relationshipName>Application_Course_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_End_Date__c</fullName>
        <formula>Course_Offering__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calendar_Start_Date__c</fullName>
        <formula>Course_Offering__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Callista_Applicant_Id__c</fullName>
        <formula>Application__r.Callista_Applicant_Id__c</formula>
        <label>Callista Applicant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Application_Id__c</fullName>
        <formula>Application__r.Callista_Application_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Callista Application Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Error_Message__c</fullName>
        <label>Callista Response Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callista_Last_Modified_Date__c</fullName>
        <label>Callista Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Callista_Student_ID_MIX__c</fullName>
        <description>Populated by the inbound ACP event processing</description>
        <label>Applicant Student ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Student_Id__c</fullName>
        <formula>Applicant__r.Person_ID_unique__c</formula>
        <label>Callista Student Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Submission_Message__c</fullName>
        <description>Shows the integration payload for the Calista outbound message.</description>
        <inlineHelpText>Shows the integration payload for the Calista outbound message.</inlineHelpText>
        <label>Callista Submission Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callista_Sync_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checking whether callista sync was successful or not</description>
        <label>Callista Sync Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callista_Unique_Key_ADM__c</fullName>
        <description>Person ID - Admission Appl - Course Code - Application Seq</description>
        <externalId>true</externalId>
        <label>ADM Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Callista_Unique_Key_AP__c</fullName>
        <description>Callista Application Id - Portal Seq</description>
        <externalId>true</externalId>
        <label>AP Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled ?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>